[tool.poetry]
name = "notebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
httpx = "^0.23.0"
pyngrok = "^5.1.0"

[tool.poetry.dev-dependencies]
pudb = "^2022.1.2"
pytest = "^7.1.3"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
