[tool.poetry]
name = "notebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
httpx = "^0.23.0"
pyngrok = "^5.1.0"
attrs = "^22.1.0"
Mako = "^1.2.2"
evernote3 = "^1.25.14"
oauth2 = "^1.9.0"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pudb = "^2022.1.2"
pytest = "^7.1.3"
black = {version = "^22.8.0", allow-prereleases = true}
flake8 = "^5.0.4"
pyproject-flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88